--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/MainView.xaml
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/MainView.xaml
@@ -1,18 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:views="clr-namespace:LearningEnglishMobile.Core.Views;assembly=LearningEnglishMobile.Core"
              mc:Ignorable="d"
              x:Class="LearningEnglishMobile.Core.Views.MainView"
-            Title="LearningEnglish">
-
-    <views:VocabularyView x:Name="VocabularyView"/>
-
-    <views:TrainingView x:Name="TrainingView"/>
-
-
-    <views:WordSetView x:Name="WordSetView"/>
-
-</TabbedPage>
+             xmlns:views="clr-namespace:LearningEnglishMobile.Core.Views;assembly=LearningEnglishMobile.Core">
+    <MasterDetailPage.Master>
+        <views:MasterMainView x:Name="MasterView" />
+    </MasterDetailPage.Master>
+  <MasterDetailPage.Detail>
+    <NavigationPage>
+      <x:Arguments>
+          <TabbedPage Title="LearningEnglish">
+              <views:VocabularyView x:Name="VocabularyView"/>
+              <views:TrainingView x:Name="TrainingView"/>
+              <views:WordSetView x:Name="WordSetView"/>
+           </TabbedPage>
+      </x:Arguments>
+    </NavigationPage>
+  </MasterDetailPage.Detail>
+</MasterDetailPage>
