--- a/Services/IdentityApi/Views/Account/Login.cshtml
+++ b/Services/IdentityApi/Views/Account/Login.cshtml
@@ -7,9 +7,8 @@
 }
 
     <div class="container">
-        <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6 border-left">
+        <div class="row  justify-content-end">
+            <div class="col-12 col-md-6 border-left">
                 <nav class="navbar navbar-expand-md bg-light row">
                     <ul class="nav navbar-nav nav-tabs ml-auto">
                         <li class="nav-item" style="width:150px">
@@ -20,7 +19,7 @@
                         </li>
                     </ul>
                 </nav>               
-                <div class="container account-login-container">
+                <div class="container">
                     <div class="row">
                         <div class="col-md-12">
                             <section>
