--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/MasterMainView.xaml
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/MasterMainView.xaml
@@ -3,42 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
+             mc:Ignorable="d"             
+             xmlns:viewModelBase="clr-namespace:LearningEnglishMobile.Core.ViewModels.Base;assembly=LearningEnglishMobile.Core"
+             viewModelBase:ViewModelLocator.AutoWireViewModel="true"
              x:Class="LearningEnglishMobile.Core.Views.MasterMainView"             
              Title="Master">
     <StackLayout>
-        <ListView x:Name="MenuItems"
-              SeparatorVisibility="None"
-              HasUnevenRows="true"
-              ItemsSource="{Binding MenuItems}">
-            <ListView.Header>
-
-                <Grid BackgroundColor="#03A9F4">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="10"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="10"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="30"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="10"/>
-                    </Grid.RowDefinitions>
-                    <Label Grid.Column="1" Grid.Row="1" Text="Hello, Dmitry!" Style="{DynamicResource SubtitleStyle}"/>
-                </Grid>
-            </ListView.Header>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <StackLayout Padding="15,10" HorizontalOptions="FillAndExpand">
-                            <Label VerticalOptions="FillAndExpand" 
-                    VerticalTextAlignment="Center" 
-                    Text="{Binding Title}" 
-                    FontSize="24"/>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <Grid BackgroundColor="#03A9F4">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="10"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="10"/>
+            </Grid.RowDefinitions>
+            <StackLayout Grid.Column="1" Grid.Row="1" HorizontalOptions="End">
+                <Label  Text="Привет," Style="{DynamicResource SubtitleStyle}"/>
+                <Label  Text="{Binding UserInfo.Name}" Style="{DynamicResource SubtitleStyle}"/>
+            </StackLayout>
+        </Grid>
+        <Button Text="Выйти" Command="{Binding LogoutCommand}"></Button>
     </StackLayout>
 </ContentPage>
