--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/TrainingView.xaml
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/TrainingView.xaml
@@ -3,8 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModelBase="clr-namespace:LearningEnglishMobile.Core.ViewModels.Base;assembly=LearningEnglishMobile.Core"
+             viewModelBase:ViewModelLocator.AutoWireViewModel="true"
              mc:Ignorable="d"
-             x:Class="LearningEnglishMobile.Core.Views.TrainingView"
+             x:Class="LearningEnglishMobile.Core.Views.TrainingView"             
              Title="Trainings">
     <ContentPage.Content>
         <Grid >
