--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/VocabularyView.xaml
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/VocabularyView.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
+             mc:Ignorable="d"             
+             xmlns:viewModelBase="clr-namespace:LearningEnglishMobile.Core.ViewModels.Base;assembly=LearningEnglishMobile.Core"
+             viewModelBase:ViewModelLocator.AutoWireViewModel="true"
              x:Class="LearningEnglishMobile.Core.Views.VocabularyView"
              x:Name="Page"
              Title="Vocabulary">
