mobile chooseTranslate&userVocabulary on api

--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/LoginView.xaml
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/LoginView.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:viewModelBase="clr-namespace:LearningEnglishMobile.Core.ViewModels.Base;assembly=LearningEnglishMobile.Core"
+             viewModelBase:ViewModelLocator.AutoWireViewModel="true"
              xmlns:behaviors="clr-namespace:LearningEnglishMobile.Core.Behaviors"
              mc:Ignorable="d"             
              x:Class="LearningEnglishMobile.Core.Views.LoginView"
