--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/UserWordsView.xaml
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/UserWordsView.xaml
@@ -45,11 +45,12 @@
                                     <ColumnDefinition Width="40"/>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="40"/>
                                 </Grid.ColumnDefinitions>
-                                <BoxView Color="LightGreen" IsVisible="{Binding IsSelected}"/>
+                                <BoxView Color="LightGreen" IsVisible="{Binding IsSelected}" CornerRadius="10" VerticalOptions="Center"  HorizontalOptions="Center"   WidthRequest="20" HeightRequest="20"/>
+                                <ProgressBar Grid.Column="0" Progress="0.5" IsVisible="{Binding IsSelected, Converter={StaticResource InverseBoolConverter}}" />
                                 <Label  Grid.Column="1" Text="{Binding Word}" VerticalOptions="Center" />
-                                <Label Grid.Column="2" Text="{Binding Translation}" VerticalOptions="Center"/>
+                                <Label Grid.Column="2" Text="{Binding Translation}" VerticalOptions="Center"/>                                
                                 <Button  Grid.Column="3" Text="Delete" Command="{Binding Source={x:Reference Page}, Path=BindingContext.DeleteWordCommand}" CommandParameter="{Binding .}"/>
                             </Grid>
                         </ViewCell>
