--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/WordSetView.xaml
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/Views/WordSetView.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="LearningEnglishMobile.Core.Views.WordSetView"
-             Title="WordSet">
+             Title="Наборы">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="WordSet"
