--- a/Web/LearningEnglishWeb/Views/Vocabulary/WordList.cshtml
+++ b/Web/LearningEnglishWeb/Views/Vocabulary/WordList.cshtml
@@ -28,7 +28,7 @@
                     <input type="checkbox" />
                     <input type="hidden" value="@item.Id" name="wordId" />
                 </td>
-                <td style="width:2%" class="p-0">
+                <td  class="p-0">
                     <div class="thumbnail-wrapper">
                         <img class="img-thumbnail" src=@item.ImageSrc>
                     </div>
