--- a/Web/LearningEnglishWeb/Views/Training/Index.cshtml
+++ b/Web/LearningEnglishWeb/Views/Training/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using LearningEnglishWeb.ViewModels.Training
-@using LearningEnglishWeb.Models.Training
+@using Data.Core
 @model ChooseTrainingViewModel  
 @{
     ViewData["Title"] = "Training Page";
